--- a/UI/batchEditor.ui
+++ b/UI/batchEditor.ui
@@ -62,25 +62,57 @@
      </widget>
     </item>
     <item row="2" column="0">
-     <layout class="QGridLayout" name="optionsGrid" columnstretch="0,0,0">
+     <layout class="QGridLayout" name="optionsGrid" columnstretch="0,0,0,0,0">
+      <property name="horizontalSpacing">
+       <number>8</number>
+      </property>
       <property name="verticalSpacing">
-       <number>16</number>
+       <number>10</number>
       </property>
       <item row="1" column="0">
        <widget class="QLabel" name="exportForLabel">
         <property name="text">
          <string>Export option:</string>
         </property>
+        <property name="alignment">
+         <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+        </property>
        </widget>
       </item>
-      <item row="2" column="2">
+      <item row="2" column="4">
        <widget class="QPushButton" name="multitrackTuning">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
          <string>multitrack tuning</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1" colspan="2">
+      <item row="5" column="0" colspan="5">
+       <widget class="QCheckBox" name="preview">
+        <property name="text">
+         <string>preview before starting</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" colspan="5">
+       <widget class="QCheckBox" name="organizeIntoFolders">
+        <property name="text">
+         <string>Organize files into folders</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+        <property name="tristate">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" colspan="4">
        <widget class="QComboBox" name="exportSelector">
         <item>
          <property name="text">
@@ -114,34 +146,14 @@
         </item>
        </widget>
       </item>
-      <item row="5" column="0" colspan="3">
-       <widget class="QCheckBox" name="preview">
-        <property name="text">
-         <string>preview before starting</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0" colspan="3">
-       <widget class="QCheckBox" name="organizeIntoFolders">
-        <property name="text">
-         <string>Organize files into folders</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-        <property name="tristate">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0" colspan="3">
+      <item row="4" column="0" colspan="5">
        <widget class="QCheckBox" name="splitOnly">
         <property name="text">
          <string>split clips only</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="0" colspan="3">
+      <item row="6" column="0" colspan="5">
        <widget class="QCheckBox" name="separateTracks">
         <property name="text">
          <string>keep audio tracks separate</string>
@@ -154,12 +166,73 @@
       <item row="2" column="0">
        <widget class="QLabel" name="audioThresholdLabel">
         <property name="text">
-         <string>Audio threshold:</string>
+         <string>Audio threshold (%):</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="2" column="3">
+       <widget class="QSpinBox" name="audioThresholdSpinbox">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>7</width>
+          <height>24</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>30</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="sizeIncrement">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="wrapping">
+         <bool>false</bool>
+        </property>
+        <property name="frame">
+         <bool>false</bool>
+        </property>
+        <property name="buttonSymbols">
+         <enum>QAbstractSpinBox::ButtonSymbols::NoButtons</enum>
+        </property>
+        <property name="accelerated">
+         <bool>true</bool>
+        </property>
+        <property name="correctionMode">
+         <enum>QAbstractSpinBox::CorrectionMode::CorrectToPreviousValue</enum>
+        </property>
+        <property name="keyboardTracking">
+         <bool>true</bool>
+        </property>
+        <property name="showGroupSeparator" stdset="0">
+         <bool>false</bool>
+        </property>
+        <property name="value">
+         <number>6</number>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1" colspan="2">
        <widget class="QSlider" name="audiothresholdSlider">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>9</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="mouseTracking">
          <bool>false</bool>
         </property>
@@ -197,7 +270,7 @@
          <bool>false</bool>
         </property>
         <property name="tickPosition">
-         <enum>QSlider::TickPosition::TicksBelow</enum>
+         <enum>QSlider::TickPosition::NoTicks</enum>
         </property>
         <property name="tickInterval">
          <number>10</number>
@@ -213,6 +286,9 @@
       </property>
       <item>
        <widget class="QPushButton" name="startButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="text">
          <string>Start</string>
         </property>
@@ -319,6 +395,9 @@
       </item>
       <item row="0" column="1" colspan="3">
        <widget class="QLineEdit" name="rootDirectoryLabel">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
         <property name="placeholderText">
          <string>no directory selected</string>
         </property>
@@ -336,7 +415,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Select files longer than (minutes:) </string>
+         <string>Select files longer than (minutes): </string>
         </property>
         <property name="alignment">
          <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
@@ -354,10 +433,23 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QSpinBox" name="minLengthSpinbox"/>
+       <widget class="QSpinBox" name="minLengthSpinbox">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>16777215</height>
+         </size>
+        </property>
+       </widget>
       </item>
       <item row="4" column="1">
        <widget class="QLineEdit" name="filesFoundLabel">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="readOnly">
          <bool>true</bool>
         </property>
@@ -368,6 +460,12 @@
       </item>
       <item row="5" column="1">
        <widget class="QLineEdit" name="filesToEditLabel">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="readOnly">
          <bool>true</bool>
         </property>
@@ -382,7 +480,7 @@
          <bool>true</bool>
         </property>
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -401,6 +499,9 @@
         </property>
        </widget>
       </item>
+      <item row="4" column="2">
+       <widget class="QWidget" name="loadingPlaceholder" native="true"/>
+      </item>
      </layout>
     </item>
    </layout>
@@ -413,5 +514,38 @@
   </action>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>audiothresholdSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>audioThresholdSpinbox</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>223</x>
+     <y>219</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>115</x>
+     <y>215</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>audioThresholdSpinbox</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>audiothresholdSlider</receiver>
+   <slot>setValue(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>158</x>
+     <y>203</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>195</x>
+     <y>203</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
