--- a/UI/batchEditor.ui
+++ b/UI/batchEditor.ui
@@ -111,6 +111,9 @@
         <property name="maximum">
          <number>9999</number>
         </property>
+        <property name="value">
+         <number>3</number>
+        </property>
        </widget>
       </item>
       <item row="6" column="0">
@@ -645,6 +648,9 @@
  <tabstops>
   <tabstop>selectRootDirectoryButton</tabstop>
   <tabstop>rootDirectoryLabel</tabstop>
+  <tabstop>minLengthSpinbox</tabstop>
+  <tabstop>editSelectedFilesButton</tabstop>
+  <tabstop>filesToEditSpinbox</tabstop>
   <tabstop>totalLengthToEditSpinbox</tabstop>
   <tabstop>exportSelector</tabstop>
   <tabstop>audiothresholdSlider</tabstop>
@@ -652,8 +658,11 @@
   <tabstop>multitrackTuningButton</tabstop>
   <tabstop>organizeIntoFolders</tabstop>
   <tabstop>separateTracks</tabstop>
+  <tabstop>preview</tabstop>
+  <tabstop>splitOnly</tabstop>
   <tabstop>saveConfig</tabstop>
   <tabstop>resetConfig</tabstop>
+  <tabstop>resetConfig_2</tabstop>
   <tabstop>startButton</tabstop>
  </tabstops>
  <resources/>
